// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UIOutlinedButton component should render correctly with slot 1`] = `
<div>
  <button
    class="ui-outlined-button ui-outlined-button--grey"
    type="button"
  >
    Outlined button
  </button>
</div>
`;

exports[`UIOutlinedButton component should render correctly without slot 1`] = `
<div>
  <button
    class="ui-outlined-button ui-outlined-button--grey"
    type="button"
  />
</div>
`;
